[package]
name = "arty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.3"
poise = "0.5.7"
shuttle-poise = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.0"
anyhow = "1.0.75"

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework"]
